--- a/.github/assets/gh-root.html
+++ b/.github/assets/gh-root.html
@@ -6,3 +6,69 @@
   <li><a href="https://pinochet-api.fly.dev/docs">FastApi Docs</a></li>
   <li><a href="https://pinochet-api.fly.dev/graphql">Graphql endpoint</a></li>
 </ul>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Linktree</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .link {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .link-title {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        .link-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .link-list-item {
+            margin-bottom: 10px;
+        }
+
+        .link-list-item a {
+            color: #333;
+            text-decoration: none;
+            font-size: 16px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="link">
+          <h2 class="link-title">Pinochet Rettig - Pinochet</h2>
+          <ul>
+            <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/dbt_docs">dbt Documentation</a></li>
+            <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/elementary">Elementary Report</a></li>
+            <li><a href="https://pinochet-api.fly.dev/docs">FastApi Docs</a></li>
+            <li><a href="https://pinochet-api.fly.dev/graphql">Graphql endpoint</a></li>
+          </ul>
+        </div>
+    </div>
+</body>
+</html>
