--- a/.github/assets/gh-root.html
+++ b/.github/assets/gh-root.html
@@ -1,13 +1,3 @@
-<h1>Pinochet - Rettig Report - Available links</h1>
-
-<ul>
-  <li><a href="/dbt_docs">dbt Documentation</a></li>
-  <li><a href="/elementary">Elementary Report</a></li>
-  <li><a href="https://pinochet-api.fly.dev/docs">FastApi Docs</a></li>
-  <li><a href="https://pinochet-api.fly.dev/graphql">Graphql endpoint</a></li>
-</ul>
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,7 +51,7 @@
 <body>
     <div class="container">
         <div class="link">
-          <h2 class="link-title">Pinochet Rettig - Pinochet</h2>
+          <h2 class="link-title">Rettig Report Analysis</h2>
           <ul>
             <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/dbt_docs">dbt Documentation</a></li>
             <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/elementary">Elementary Report</a></li>
