fix: update linktree with working links

--- a/.github/assets/gh-root.html
+++ b/.github/assets/gh-root.html
@@ -53,9 +53,9 @@
         <div class="link">
           <h2 class="link-title">Rettig Report Analysis</h2>
           <ul>
-            <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/dbt_docs">dbt Documentation</a></li>
-            <li><a href="https://github.com/diegoquintanav/pinochet-analyze-50/elementary">Elementary Report</a></li>
-            <li><a href="https://pinochet-api.fly.dev/docs">FastApi Docs</a></li>
+            <li><a href="https://diegoquintanav.github.io/pinochet-analyze-50/dbt_docs">dbt Documentation</a></li>
+            <li><a href="https://diegoquintanav.github.io/pinochet-analyze-50/elementary">Elementary Report</a></li>
+            <li><a href="https://pinochet-api.fly.dev/docs">FastAPI Docs</a></li>
             <li><a href="https://pinochet-api.fly.dev/graphql">Graphql endpoint</a></li>
           </ul>
         </div>
